--- a/ionic1/www/app/layout/menu.layout.html
+++ b/ionic1/www/app/layout/menu.layout.html
@@ -16,15 +16,18 @@
         <h1 class="title">My Food Truck App</h1>
       </ion-nav-buttons>
     </ion-nav-bar>
+    <ion-nav-view name="mainContent"></ion-nav-view>
   </ion-pane>
 
   <ion-side-menu side="left">
     <ion-header-bar align-title="left" class="bar-positive">
       <h1 class="title">Menu</h1>
     </ion-header-bar>
+
     <ion-content class="has-header">
       <ion-list>
-        <ion-item nav-clear menu-close>Home</ion-item>
+        <ion-item nav-clear menu-close ui-sref="home.home">Home</ion-item>
+        <ion-item nav-clear menu-close ui-sref="app.register">Register</ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
