--- a/ionic1/www/app/layout/menu.layout.html
+++ b/ionic1/www/app/layout/menu.layout.html
@@ -28,6 +28,8 @@
       <ion-list>
         <ion-item nav-clear menu-close ui-sref="home.home">Home</ion-item>
         <ion-item nav-clear menu-close ui-sref="app.register">Register</ion-item>
+        <ion-item nav-clear menu-close ui-sref="app.trucks">Food Trucks</ion-item>
+        <ion-item nav-clear menu-close ui-sref="app.user">My Account</ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
