--- a/ionic1/www/app/layout/menu.layout.html
+++ b/ionic1/www/app/layout/menu.layout.html
@@ -11,12 +11,13 @@
 
   <ion-pane ion-side-menu-content>
     <ion-nav-bar class="">
+      <ion-nav-back-button class="button-royal"></ion-nav-back-button>
       <ion-nav-buttons side="left">
         <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
         <h1 class="title">My Food Truck App</h1>
       </ion-nav-buttons>
     </ion-nav-bar>
-    <ion-nav-view name="mainContent"></ion-nav-view>
+    <ion-nav-view name="mainContent" animation="side-left-right"></ion-nav-view>
   </ion-pane>
 
   <ion-side-menu side="left">
