update with best practices

--- a/ionic1/www/app/templates/register/register.html
+++ b/ionic1/www/app/templates/register/register.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Register" ng-controller="registerCtrl">
+<ion-view view-title="Register" ng-controller="RegisterCtrl">
   <ion-content class=" padding has-header">
     <h1>Register User</h1>
 
