--- a/ionic1/www/app/templates/users/my-account.html
+++ b/ionic1/www/app/templates/users/my-account.html
@@ -1,4 +1,4 @@
-<ion-view view-title="My Account" ng-controller="myAccountCtrl">
+<ion-view view-title="My Account" ng-controller="MyAccountCtrl">
   <ion-content class=" padding has-header">
     <h1>My Account</h1>
   </ion-content>
