update with new services and ngcordova

--- a/ionic1/www/app/templates/home/home-tab.html
+++ b/ionic1/www/app/templates/home/home-tab.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Home Tab">
+<ion-view view-title="Home Tab" ng-controller="HomeCtrl">
   <ion-content class="padding has-header">
     <h1>Home</h1>
 
